Added JobsServiceLocator support