@@ -4,6 +4,7 @@ import business.Employee;
 import business.EmployeeBuilder;
 import business.EmployeeManager;
 import business.jobs.Job;
+import business.jobs.JobsServiceLocator;
 import business.jobs.JuniorDev;
 import business.jobs.Manager;
 import business.payment.*;
@@ -75,7 +76,7 @@ public class EmployeeController {
 
         // @NOTE @TODO Check if code is valid and secure
         PaymentStrategy strategy;
-        strategy = (PaymentStrategy) PaymentsServiceLocator.getInstance().getMatching(jobController.getPaymentStrategyValue()).getClassRef().newInstance();
+        strategy = (PaymentStrategy) PaymentsServiceLocator.getInstance().getMatching(jobController.getPaymentStrategyValue()).getClassRef().getDeclaredConstructor().newInstance();
 
         // @NOTE @XXX Dangerous zone
         Money salary = new Money(jobController.getPaymentValue(), /*jobController.getPaymentCurrencyValue()*/"PLN");
@@ -94,23 +95,21 @@ public class EmployeeController {
                 throw new Exception("Chose no payment type");
         }
 
-        Job job;
+        try {
+            Job job;
+            Class jobClass = JobsServiceLocator.getInstance().getMatching(jobController.getJobTitleValue()).getClassRef();
+            job = (Job) jobClass.getDeclaredConstructor(PaymentStrategy.class).newInstance(strategy);
+            System.out.println(job.getSalary().getPaymentName());
 
-        switch(jobController.getJobTitleValue()) {
-            case "Manager":
-                job = new Manager(strategy);
-                break;
-            case "JuniorDev":
-                job = new JuniorDev(strategy);
-                break;
-            default:
-                throw new Exception("Chose no job");
-
+            EmployeeBuilder.setJob(job);
+            EmployeeManager.getInstance().updateEmployee(EmployeeBuilder.buildAndClear());
+            SceneSwitcher.getInstance().switchScene(BillingTableGenerator.getInstance().generate());
+        } catch(Error e) {
+            System.out.println(e);
         }
-
-        EmployeeBuilder.setJob(job);
-        EmployeeManager.getInstance().updateEmployee(EmployeeBuilder.buildAndClear());
-        SceneSwitcher.getInstance().switchScene(BillingTableGenerator.getInstance().generate());
+        catch(Exception e) {
+            System.out.println(e);
+        }
     }
 
     public void cancel() throws Exception {
